Fix bug with alignment

--- a/renderer/styles/reset.css
+++ b/renderer/styles/reset.css
@@ -67,3 +67,7 @@ table {
 	font-family: "Poppins", sans-serif;
 	user-select: none;
 }
+
+i {
+	pointer-events: none;
+}
